@@ -1,7 +1,7 @@
 [Desktop Entry]
 _Name=GNOME Control Center
 _Comment=The GNOME configuration tool
-Icon=control-center.png
+Icon=control-center2.png
 Exec=gnomecc
 Terminal=0
 Type=Application
