@@ -1,3 +1,8 @@
+2002-02-05  jacob berkman  <jacob@ximian.com>
+
+	* gnomecc.desktop.in (Icon): 
+	* capplet-dir.c (find_icon): use control-center2.png
+
 2002-02-04  Lauris Kaplinski  <lauris@ximian.com>
 
 	* capplet-dir-view-tree.c (populate_tree_branch): Use
